--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+/node_modules/
+**/node_modules/
 
-# Swap the comments on the following lines if you wish to use zero-installs
-# In that case, don't forget to run `yarn config set enableGlobalCache false`!
-# Documentation here: https://yarnpkg.com/features/caching#zero-installs
-
-#!.yarn/cache
-.pnp.*
+# misc
+.env
+/.env*
+/data
+/coverage/
+/npm-debug.log*
+/testem.log
+/yarn-error.log
+.vercel
+local_cache
+.DS_Store
