--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "build": ""
   },
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "debug": "^4.3.4",
-    "openai": "^4.24.7"
+    "bluebird": "3.7.2",
+    "debug": "4.3.4"
   },
   "volta": {
     "node": "20.10.0",
